[package]
name = "kawa-transcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.1"
libc = "0.2.153"
log = "0.4.20"
prost = "0.12.3"
slab = "0.4.9"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs", "process"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
